--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "website",
+  "name": "brik-labs-website",
   "version": "1.0.0",
   "description": "Sustainable agriculture technology",
   "author": "Alex Valle",
