--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "@nuxtjs/dotenv": "^1.3.0",
     "contentful": "^7.5.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
-    "vuetify": "^1.5.5",
-    "vuetify-loader": "^1.2.1"
+    "nuxt": "^2.4.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
