--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/dotenv": "^1.3.0",
     "contentful": "^7.5.0",
     "cross-env": "^5.2.0",
+    "moment": "^2.24.0",
     "nuxt": "^2.4.0"
   },
   "devDependencies": {
