--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@contentful/rich-text-html-renderer": "^13.1.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.3.0",
+    "bulma-timeline": "^3.0.4",
     "contentful": "^7.5.0",
     "cross-env": "^5.2.0",
     "moment": "^2.24.0",
