--- a/package.json
+++ b/package.json
@@ -15,12 +15,9 @@
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^13.1.0",
-    "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.3.0",
-    "bulma-timeline": "^3.0.4",
     "contentful": "^7.5.0",
-    "cross-env": "^5.2.0",
-    "moment": "^2.24.0",
+    "date-fns": "^2.0.0-alpha.27",
     "nuxt": "^2.4.0"
   },
   "devDependencies": {
